--- a/src/less/code.less
+++ b/src/less/code.less
@@ -29,7 +29,8 @@ pre > code {
   }
 }
 
-p > code {
+p > code,
+li > code {
   display: inline;
   overflow-y: visible !important;
   width: fit-content;
@@ -63,7 +64,7 @@ code {
 .python.hljs {
   color: #e4f8fd !important;
   background: #323335 !important;
-
+/*
   &::before  {
     display: block;
     font-style: normal;
@@ -74,7 +75,7 @@ code {
     font-weight: 900;
     content: "\f3e2";
   }
-
+*/
   .hljs-addition,
   .hljs-attribute,
   .hljs-meta-string,
