--- a/src/less/post.less
+++ b/src/less/post.less
@@ -15,7 +15,7 @@
 		}
 
 		article {
-			margin: 50px auto 0;
+			margin: 70px auto 0;
 			box-shadow: @shadow-color;
 
 			@media(max-width: 800px) {
@@ -43,6 +43,8 @@
 		font-family: CompassSans-Medium !important;
 		font-size: 2.5em;
 		font-weight: 500;
+		color: @h1-color;
+
 		@media(max-width: 800px) {
 			font-weight: 500;
 			font-size: 1.8em;
@@ -51,7 +53,7 @@
 		}
 
 		a {
-			color: @text-color-heading;
+			color: @h1-color;
 			transition: all 0.2s ease-out;
 
 			&:hover {
@@ -66,6 +68,8 @@
 		margin-top: 10px;
 		margin-bottom: 0;
 		line-height: 1.2;
+		color: @h1-color;
+
 		@media(max-width: 800px) {
 			margin: 15px auto 0;
 			font-size: 1.2em;
@@ -111,6 +115,10 @@
 			font-weight: 600;
 			font-size: 1.3em;
 		}
+	}
+
+	h4 {
+		margin-bottom: 0;
 	}
 
 	p {
@@ -812,7 +820,7 @@
 		ol,
 		ul {
 			margin-left: 15px;
-			padding-left: 15px;
+			padding-left: 0;
 			margin-bottom: 20px;
 			@media(max-width:600px) {
 				margin-left: 0;
@@ -826,6 +834,7 @@
 				 text-rendering: auto;
 				 -webkit-font-smoothing: antialiased;
 				 margin-bottom: 12px;
+				 padding-left: 0;
 
 				 @media(max-width: 600px) {
 					   margin-left: 0;
