--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -14,7 +14,7 @@
 				{{/if}}
 				<h1>{{{title}}}</h1>
 				<p>{{content}}</p>
-				{{> repos}}
+				{{!--{{> repos}}--}}
 			</div>
 			{{> kanban}}
 		{{/post}}
