styles, more series in sidebar

--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -321,6 +321,8 @@
 		line-height: 1;
 		height: 14px;
 		background: @button-color;
+		border-bottom: 1px solid #009c83;
+		border-right: 2px solid #009c83;
 		@media(max-width: 600px) {
 			padding: 13px 18px;
 			font-family: AvenirNextLTPro-Regular,serif;
