--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -204,6 +204,7 @@
 				color: white;
 				border: 0;
 				text-transform: Uppercase;
+				transition: all .3s easeout;
 
 				span {
 					font-size: 14px;
@@ -260,7 +261,7 @@
 				padding: 0;
 				/*background: linear-gradient(190deg,rgb(255, 255, 255) 0,rgba(99, 101, 202, 0.11));*/
 				background: #f4f9ff;
-				margin-bottom: 15px;
+				margin-bottom: 10px;
 				overflow: hidden;
 				display: inline-block;
 				align-items: center;
