--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -75,6 +75,7 @@
 		    margin: 0 10px 10px 0;
 				flex-grow: 1;
 		    text-align: center;
+				transition: all .3s easeout;
 
 
 				&:hover {
@@ -112,10 +113,10 @@
 				padding-bottom:10px;
 
 				.avi {
-					height:30px;
-					width:30px;
+					height:35px;
+					width:35px;
 					border-radius: 50%;
-					margin-right: 20px
+					margin-right: 15px
 				}
 			}
 
