--- a/src/less/post.less
+++ b/src/less/post.less
@@ -100,7 +100,7 @@
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.8em;
+			font-size: 1.6em;
 		}
 	}
 
@@ -114,6 +114,9 @@
 		@media(max-width: 800px) {
 			font-weight: 600;
 			font-size: 1.3em;
+		}
+		@media(max-width: 600px) {
+			font-size: 1.15em;
 		}
 	}
 
@@ -678,7 +681,7 @@
 				margin: 20px auto;
 			}
 
-			p {
+			* {
 				padding-left: 20px;
 				font-size: 24px;
 				line-height: 1.2 !important;
@@ -687,11 +690,15 @@
 			}
 		}
 
+		pre > code {
+			background-color: #323335;
+		}
+
 		p {
 			margin: 10px 0 20px;
 		}
 		@media(max-width: 800px) {
-			margin: 35px 20px 10px;
+			margin: 35px 35px 10px;
 		}
 	}
 
@@ -823,7 +830,7 @@
 			padding-left: 0;
 			margin-bottom: 20px;
 			@media(max-width:600px) {
-				margin-left: 0;
+				margin: 0 20px;
 				padding-left: 0;
 			}
 
@@ -833,8 +840,9 @@
 				 font-variant: normal;
 				 text-rendering: auto;
 				 -webkit-font-smoothing: antialiased;
-				 margin-bottom: 12px;
+				 margin-bottom: 20px;
 				 padding-left: 0;
+				 line-height: 1.6;
 
 				 @media(max-width: 600px) {
 					   margin-left: 0;
