--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -5,7 +5,7 @@
 	<li class="acount">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 			<ul id="login-dp" class="dropdown-menu">
-								 <form class="form" role="form" method="post" action="signup()" accept-charset="UTF-8" id="login-nav">
+								 <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 										<div class="form-group">
 											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
 											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
