--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -6,16 +6,17 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 			<ul id="login-dp" class="dropdown-menu">
 								 <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
+										<div id="create-a-user" class="form-group">
+											   <label for="create-a-user-email">Email:</label>
+											 <input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
 										</div>
 										<div class="form-group">
-											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>										</div>
+											 <label for="create-a-user-password">Password:</label>
+											 <input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
+										 </div>
 										<div class="buttons">
-											 <button type="submit" class="btn signin">Sign in</button>
-											 <button class="btn signup">Sign up</button>
+											 <button type="submit" class="btn signin" onclick="handleLogin()">Sign in</button>
+											 <button class="btn btn-success" onclick="handleSignup()">Create Account</button>
 										</div>
 										<div class="forgot"><a href="">Forget password?</a></div>
 								 </form>
