--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -24,6 +24,8 @@
 			</ul>
     </li>
 </ul>
+
+<!--
 <script>
   const client = stitch.Stitch.initializeDefaultAppClient('hackers-uangn');
   const db = client.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('hackers');
@@ -64,4 +66,4 @@ $(document).ready(function{
 		return null;
 	}
 });
-</script>
+</script>-->
