--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -23,21 +23,21 @@
         Go Back
       </button>
 					</div>
-					<!--<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
-										<div id="create-a-user" class="form-group">
-											   <label for="create-a-user-email">Email:</label>
-											 <input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
+					<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+						<div id="create-a-user" class="form-group">
+							<label for="create-a-user-email">Email:</label>
+							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
 										</div>
-										<div class="form-group">
-											 <label for="create-a-user-password">Password:</label>
-											 <input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
+							<div class="form-group">
+								<label for="create-a-user-password">Password:</label>
+								<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
 										 </div>
-										<div class="buttons">
-											 <button type="submit" class="btn signin" onclick="handleLogin()">Sign in</button>
-											 <button class="btn btn-success" onclick="handleSignup()">Create Account</button>
-										</div>
-										<div class="forgot"><a href="">Forget password?</a></div>
-								 </form>-->
+								<div class="buttons">
+									<button type="submit" class="btn signin" onclick="handleLogin()">Sign in</button>
+									<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
+								</div>
+								<div class="forgot"><a href="">Forget password?</a></div>
+					</form>
 		</ul>
 	</li>
 </ul>
