--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -23,7 +23,7 @@
         Go Back
       </button>
 					</div>
-					<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+					<!--<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 						<div id="create-a-user" class="form-group">
 							<label for="create-a-user-email">Email:</label>
 							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
@@ -37,7 +37,7 @@
 									<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
 								</div>
 								<div class="forgot"><a href="">Forget password?</a></div>
-					</form>
+					</form>-->
 		</ul>
 	</li>
 </ul>
