--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -6,7 +6,7 @@
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 		<ul id="login-dp" class="dropdown-menu">
 			<div id="create-a-user" hidden>
-				<h4>Create Email/Password Account</h4>
+				<h4>Sign in</h4>
 				<label for="create-a-user-email">Email:</label>
 				<div class="input-group mb-1">
 					<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
