--- a/src/less/login.less
+++ b/src/less/login.less
@@ -7,24 +7,41 @@
   width: 210px;
   top: 40px;
 
+  * {
+    text-shadow: none;
+  }
+
+  a {
+    color: white;
+  }
+
+  h4 {
+    font-size: 1.2em;
+    text-shadow: none;
+    margin: 0;
+    color: #212b4a;
+    line-height: 1.2;
+    margin-bottom: 20px;
+  }
+
   input {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
-  background: #fff;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  padding: 10px 4%;
-  width: 90%;
-  font-size: .9em;
-  font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
-  font-weight: 200;
-  -webkit-transition: .3s all;
-  transition: .3s all;
-  outline: 0;
-  -webkit-appearance: none;
-  border: 1px solid #ebebeb;
-  border-radius: 2px;
-  margin-bottom:10px;
+    background: #fff;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px 4%;
+    width: 90%;
+    font-size: .9em;
+    font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
+    font-weight: 200;
+    -webkit-transition: .3s all;
+    transition: .3s all;
+    outline: 0;
+    -webkit-appearance: none;
+    border: 1px solid #ebebeb;
+    border-radius: 2px;
+    margin-bottom:10px;
   }
 
   .btn {
@@ -48,6 +65,8 @@
     border-right: 2px solid #009c83;
     display: inline-block;
     color:white;
+
+
   }
 
   .signup {
