--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -16,12 +16,9 @@
 					<div class="input-group mb-2">
 						<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
       </div>
-						<button class="btn btn-success" onclick="handleSignup()">
-        Create a New Account
-      </button>
-						<button class="btn btn-secondary" onclick="showControlPanel()">
-        Go Back
-      </button>
+						<button class="btn btn-success createnew" onclick="handleSignup()">
+			        Create a New Account
+			      </button>
 					</div>
 					<!--<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 						<div id="create-a-user" class="form-group">
