--- a/src/less/login.less
+++ b/src/less/login.less
@@ -6,23 +6,29 @@
   left: -192px;
   width: 210px;
   top: 40px;
+      box-shadow: 0 0 5px rgba(65,67,144,.15);
 
   * {
     text-shadow: none;
   }
 
   a {
-    color: white;
+    color: white !important;
   }
+
+  label {
+    font-size: .8em;
+}
 
   h4 {
     font-size: 1.2em;
     text-shadow: none;
     margin: 0;
-    color: #212b4a;
+    color: #53586b;
     line-height: 1.2;
     margin-bottom: 20px;
-  }
+    padding-bottom: 6px;
+border-bottom: 1px solid #53586b;}
 
   input {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
@@ -58,6 +64,14 @@
     display: flex;
     justify-content: space-between;
 
+  }
+
+  .createnew {
+    background: none;
+    text-align: center;
+    color: black;
+    width: 100%;
+    border: 0;
   }
 
   .signin {
