--- a/src/less/login.less
+++ b/src/less/login.less
@@ -6,14 +6,14 @@
   left: -192px;
   width: 210px;
   top: 40px;
-      box-shadow: 0 0 5px rgba(65,67,144,.15);
+  box-shadow: 0 0 5px rgba(65,67,144,.15);
 
   * {
     text-shadow: none;
   }
 
   #create-a-user {
-    display block;
+    display: block;
   }
 
   a {
@@ -21,8 +21,8 @@
   }
 
   label {
-    font-size: .8em;
-}
+    font-size: 0.8em;
+  }
 
   h4 {
     font-size: 1.2em;
@@ -32,7 +32,8 @@
     line-height: 1.2;
     margin-bottom: 20px;
     padding-bottom: 6px;
-border-bottom: 1px solid #53586b;}
+    border-bottom: 1px solid #53586b;
+  }
 
   input {
     box-shadow: 0 0 5px rgba(65,67,144,.15);
@@ -42,16 +43,16 @@ border-bottom: 1px solid #53586b;}
     align-items: center;
     padding: 10px 4%;
     width: 90%;
-    font-size: .9em;
+    font-size: 0.9em;
     font-family: CompassSans-Light,AvenirNextLTPro-Light,sans-serif!important;
     font-weight: 200;
-    -webkit-transition: .3s all;
-    transition: .3s all;
+    -webkit-transition: 0.3s all;
+    transition: 0.3s all;
     outline: 0;
     -webkit-appearance: none;
     border: 1px solid #ebebeb;
     border-radius: 2px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
   }
 
   .btn {
@@ -67,7 +68,6 @@ border-bottom: 1px solid #53586b;}
   .buttons {
     display: flex;
     justify-content: space-between;
-
   }
 
   .createnew {
@@ -82,9 +82,7 @@ border-bottom: 1px solid #53586b;}
     border-bottom: 1px solid #009c83;
     border-right: 2px solid #009c83;
     display: inline-block;
-    color:white;
-
-
+    color: white;
   }
 
   .signup {
@@ -95,16 +93,16 @@ border-bottom: 1px solid #53586b;}
 
   .forgot {
     text-align: center;
-    margin-top:15px;
-    a {
-    font-size: .8em;
-    color: #5f5f5f;
-    text-shadow: none;
-    text-align: center;
-    padding: 5px;
-  }
-}
+    margin-top: 15px;
 
+    a {
+      font-size: 0.8em;
+      color: #5f5f5f;
+      text-shadow: none;
+      text-align: center;
+      padding: 5px;
+    }
+  }
 
   a {
     text-shadow: 0;
