--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -5,22 +5,17 @@
 	<li class="acount">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 		<ul id="login-dp" class="dropdown-menu">
-			<div id="create-a-user" hidden>
+			<!--<div id="create-a-user" hidden>
 				<h4>Sign in</h4>
 				<label for="create-a-user-email">Email:</label>
-				<div class="input-group mb-1">
 					<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
-      </div>
-
 					<label for="create-a-user-password">Password:</label>
-					<div class="input-group mb-2">
 						<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
-      </div>
 						<button class="btn btn-success createnew" onclick="handleSignup()">
 			        Create a New Account
 			      </button>
-					</div>
-					<!--<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+					</div>-->
+					<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
 						<div id="create-a-user" class="form-group">
 							<label for="create-a-user-email">Email:</label>
 							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
@@ -34,7 +29,7 @@
 									<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
 								</div>
 								<div class="forgot"><a href="">Forget password?</a></div>
-					</form>-->
+					</form>
 		</ul>
 	</li>
 </ul>
