--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -5,29 +5,21 @@
 	<li class="acount">
 		<a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
 		<ul id="login-dp" class="dropdown-menu">
-			<!--<div id="create-a-user" hidden>
-				<h4>Sign in</h4>
-				<label for="create-a-user-email">Email:</label>
-					<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
-					<label for="create-a-user-password">Password:</label>
-						<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
-						<button class="btn btn-success createnew" onclick="handleSignup()">
-			        Create a New Account
-			      </button>
-					</div>-->
+			<!-- <div id="login" hidden>
+      <h4>Log In to Email/Password Account</h4>
+      <label for="login-email">Email:</label>
+      <input type="text" class="form-control" id="login-email" aria-label="login-email" />
+      <label for="login-password">Password:</label>
+      <input type="password" class="form-control" id="login-password" aria-label="login-password" />
+      <button class="btn btn-success" onclick="handleLogin()">
+        Log In
+      </button>-->
 					<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
-						<div id="create-a-user" class="form-group">
 							<label for="create-a-user-email">Email:</label>
 							<input type="text" class="form-control" id="create-a-user-email" aria-label="create-a-user-email" />
-										</div>
-							<div class="form-group">
 								<label for="create-a-user-password">Password:</label>
 								<input type="password" class="form-control" id="create-a-user-password" aria-label="create-a-user-password" />
-										 </div>
-								<div class="buttons">
-									<button type="submit" class="btn signin" onclick="handleLogin()">Sign in</button>
 									<button class="btn btn-success" onclick="handleSignup()">Create Account</button>
-								</div>
 								<div class="forgot"><a href="">Forget password?</a></div>
 					</form>
 		</ul>
