--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -29,7 +29,7 @@
 	<script src="{{asset "/js/includes/swiper.min.js"}}"></script>
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
-	<script src="{{asset "/js/main.min.js"}}"></script>
+	<!--<script src="{{asset "/js/main.min.js"}}"></script>-->
 
 	<script>hljs.initHighlightingOnLoad();</script>
 	{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
