--- a/src/less/login.less
+++ b/src/less/login.less
@@ -63,6 +63,9 @@
     line-height: 1;
     height: 40px;
     background: linear-gradient(135deg,#4fc388,#21b6b7);
+    color: white;
+    width: 100%;
+    margin-top: 12px;
   }
 
   .buttons {
