--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -24,6 +24,8 @@
 @import 'kanban.less';
 @import 'social.less';
 @import 'swiper.less';
+@import 'transactional.less';
+
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
